# drs-externals

./: .gitignore  .gitmodules  tobuild.txt
config/: drc_control_setup.m  gurobi_setup.sh  setup_environment.sh
config/anymal/: actuated_lidar.cfg  multisense_hyq.cfg  navigation.cfg  robot.cfg  robot.pmd  state_correction.cfg
config/atlas/: common_components.cfg  core_config.cfg  multisense_02.cfg  multisense_02_pre_upgrade.cfg  multisense_05.cfg  pronto-testing.pmd  robot.cfg  state_correction.cfg  state_estimation.cfg
config/husky/: common_components.cfg  core_config.cfg  husky-gazing-demo.pmd  husky_rvis.cfg.rviz  multisense_44.cfg  multisense_testbench_48.cfg  navigation.cfg  navigation.pmd  operator_logs.pmd  robot.cfg  robot.pmd  robot_close_loop_control.pmd  robot_sn.pmd  robot_standard_operation.pmd  state_correction.cfg  velodyne.cfg
config/husky_02/: core_config.cfg  core_config_ori.cfg  robot.cfg  robot.pmd  velodyne.cfg
config/husky_cdt/: core_config.cfg  navigation.cfg  robot.cfg  robot.pmd
config/husky_sim/: husky_sim.rviz  multisense_sim.cfg  robot.cfg  robot.pmd
config/hyq/: hyq.cfg  hyq.pmd  hyq_edinburgh.pmd  multisense_hyq.cfg  state_estimator.cfg
config/hyq-man/: hyq-man.cfg  hyq-man.pmd
config/hyq_sim/: robot.pmd
config/multisense_46/: core_config.cfg  multisense_46.cfg  robot.cfg  robot.pmd
config/val/: alpha_filter.cfg  core_config.cfg  multisense_D_50.cfg  robot.cfg  robot.pmd  state_correction.cfg
config/wildcat/: core_config.cfg  core_config_ori.cfg  multisense.cfg  robot.cfg  robot.pmd
control/: CMakeLists.txt  add_ctrl_path.m
models/: flir_ptu_description  hokuyo_description  husky_description_rpg  multisense_sl  robotiq_hand_description  sensors_description  sick_description
models/anymal_description/: anymal.gv  anymal_fp.mat  director_config.json  model.urdf  model_laser.urdf  model_laser_drake.urdf  model_pre_argos.urdf  stored_poses.json  urdf
models/atlas_v5/: CMakeLists.txt  director_config.json  package.xml
models/common_components/: multisense_sl  sensors_description
models/hokuyo_description/: CMakeLists.txt  package.xml
models/hokuyo_description/cmake/: hokuyo_descriptionConfig.cmake
models/hokuyo_description/meshes/hokuyo_utm30lx/: hokuyo_utm_30lx.mtl  hokuyo_utm_30lx.stl
models/hokuyo_description/urdf/: hokuyo_utm30lx.urdf.xacro
models/husky_description/: director_config.json  husky_fp.mat  husky_robot.gv  model.urdf
models/husky_description_rpg/: CMakeLists.txt  package.xml
models/hyq_description/: CMakeLists.txt  director_config.json  hyq_fp.mat  package.xml  stored_poses.json
models/hyq_description/meshes/hokuyo_utm30lx/: hokuyo_utm_30lx.dae
models/hyq_description/meshes/sensors/: convert_dae_2_wrl_obj_stl_chullobj.sh
models/hyq_description/meshes/trunk/: trunk.obj.mtl
models/hyq_description/robots/: hyq.urdf
models/multisense_sl/: CMakeLists.txt  director_config.json  multisense_sl_sim.urdf  package.xml
models/multisense_sl/include/multisense_sl/: GazeboCompat.hh  MultiSenseSLPlugin.h
models/multisense_sl/script/: multisense-cmd-husky.py
models/multisense_sl/src/: MultiSenseSLPlugin.cpp
models/sick_description/: CMakeLists.txt  package.xml
models/val_description/: director_config.json
ori_lcmtypes/: CMakeLists.txt
visualization/: CMakeLists.txt
(+67 files in other folders)
