<package>
  <name>hokuyo_description</name>
  <version>0.0.1</version>
  <description>hokuyo_description contains URDF xacro macros for sensors, so they are easily attachable to robot models and usable in gazebo.</description>
  <maintainer email="georgi.tinchev@ed.ac.uk">Georgi Tinchev</maintainer>

  <license>BSD</license>

  <url type="website">http://inf.ed.ac.uk</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="maurice.fallon@ed.ac.uk">Maurice Fallon</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>xacro</run_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
