<?xml version="1.0"?>
<package>
  <name>hyq_description</name>
  <version>0.0.0</version>
  <description>The hyq_description package</description>

  <maintainer email="none@none.none">none</maintainer>

  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>


  <export>

  </export>
</package>